--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: BLOG
         <header>
           <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
           <span class="byline">A free, fully responsive HTML5 site template by AJ for HTML5 UP</span> </header>
-        <div class="info"> <span class="date"><span class="month">{{ post.month }}</span> <span class="day">{{ post.day }}</span><span class="year">, {{ post.year }}</span></span>
+        <!--<div class="info"> <span class="date"><span class="month">{{ post.month }}</span> <span class="day">{{ post.day }}</span><span class="year">, {{ post.year }}</span></span>-->
           <ul class="stats">
             <li><a href="#" class="link-icon24 link-icon24-1">16</a></li>
             <li><a href="#" class="link-icon24 link-icon24-2">32</a></li>
@@ -19,6 +19,6 @@ title: BLOG
           </ul>
         </div>
         <a href="#" class="image image-full"><img src="images/n33-robot-invader.jpg" alt="" /></a>
-		<p>{{ post.excerpt }}</p>
+		<!--<p>{{ post.excerpt }}</p>-->
             </article>
 	  {% endfor %}
