--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@ title: BLOG
 </article>
 {% endfor %}
 -->
-<ul>
+<!--<ul>
 　　{% for post in site.posts %}
 　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 　　{% endfor %}
-</ul>
+</ul>-->
+<h2>title</h2>
