--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
----
+﻿---
 layout: index_layout
-title: BLOG
----　 
-<!-- Post --> 
-{% for post in site.posts %}
+---
+<ul>
+ {% for post in site.posts %}
 <article class="is-post is-post-excerpt">
   <header>
     <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-    <span class="byline">A free, fully responsive HTML5 site template by AJ for HTML5 
-
-UP</span> </header>
-  <div class="info"> <span class="date"><span class="month">12</span> <span 
-
-class="day">12</span><span class="year">, {{ post.year }}</span></span>
+    <span class="byline">A free, fully responsive HTML5 site template by AJ for HTML5 UP</span> </header>
+  <div class="info"> <span class="date"><span class="month">12</span> <span class="day">12</span><span class="year">, {{ post.year }}</span></span>
     <ul class="stats">
       <li><a href="#" class="link-icon24 link-icon24-1">16</a></li>
       <li><a href="#" class="link-icon24 link-icon24-2">32</a></li>
@@ -20,10 +15,8 @@ class="day">12</span><span class="year">, {{ post.year }}</span></span>
       <li><a href="#" class="link-icon24 link-icon24-4">128</a></li>
     </ul>
   </div>
-  <a href="#" class="image image-full"><img src="{{ site.baseurl }}/images/n33-robot-
-
-invader.jpg" alt="" /></a>
+  <a href="#" class="image image-full"><img src="{{ site.baseurl }}/images/n33-robot-invader.jpg" alt="" /></a>
   <p>post.excerpt</p>
 </article>
-{% endfor %}
-
+ {% endfor %}
+</ul>
