--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
-﻿---
-layout: index_layout
 ---
-<ul>
- {% for post in site.posts %}
+layout: index_layout
+title: Index
+---
+{% for post in site.posts %}
 <article class="is-post is-post-excerpt">
   <header>
     <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-    <span class="byline">A free, fully responsive HTML5 site template by AJ for HTML5 UP</span> </header>
-  <div class="info"> <span class="date"><span class="month">12</span> <span class="day">12</span><span class="year">, {{ post.year }}</span></span>
-    <ul class="stats">
-      <li><a href="#" class="link-icon24 link-icon24-1">16</a></li>
-      <li><a href="#" class="link-icon24 link-icon24-2">32</a></li>
-      <li><a href="#" class="link-icon24 link-icon24-3">64</a></li>
-      <li><a href="#" class="link-icon24 link-icon24-4">128</a></li>
-    </ul>
+    <span class="byline">{{ post.subtitle }}</span> </header>
+  <div class="info"> <span class="date"><span class="month">{{ post.month }}</span> <span class="day">{{ post.day }}</span><br><span class="month">{{ post.year }} </span></span>
   </div>
-  <a href="#" class="image image-full"><img src="{{ site.baseurl }}/images/n33-robot-invader.jpg" alt="" /></a>
-  <p>post.excerpt</p>
+  <a href="#" class="image image-left"><img src="images/11.jpg" alt="" /></a>
+  <p> {{ post.excerpt }}</p>
 </article>
- {% endfor %}
-</ul>
+<br><br>
+{% endfor %}
