--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@ layout: index_layout
 title: Index
 ---
 {% for post in site.posts %}
+<div>
 <article class="is-post is-post-excerpt">
+<div>
   <header>
     <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
     <span class="byline">{{ post.subtitle }}</span> </header>
+	</div>
   <div class="info"> <span class="date"><span class="month">{{ post.month }}</span> <span class="day">{{ post.day }}</span><br><span class="month">{{ post.year }} </span></span>
   </div>
+  <div>
   <a href="#" class="image image-left"><img src="images/11.jpg" alt="" /></a>
   <p> {{ post.excerpt }}</p>
+  </div>
 </article>
-<br><br>
+<h1><br><br><br><br><br><br></h1>
+</div>
 {% endfor %}
