--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@ title: Index
   <header>
     <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
     <span class="byline">{{ post.subtitle }}</span> </header>
-  <div class="info"> <span class="date"><span class="month">{{ post.month }}</span> <span class="day">{{ post.day }}</span><br><span class="month">{{ post.year }} </span></span>
+  <div class="info"> <span class="date"><span class="month">{{ post.month }}</span> <span class="day">{{ post.day }}</span><span class="year">, {{ post.year }} </span></span>
   </div>
   <p> {{ post.excerpt }}</p>
 </article>
 <br><br>
+<div class="cut-line"></div>
 {% endfor %}
